--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* Header top*/
 .header-top-1 {
-	box-shadow: 0 0 7px 1px rgba(0,0,0, 1);
+	box-shadow: 0 0 7px 1px rgba(0,0,0, .3);
 	padding: 10px;
 	background-color: #F5F7FA;
 	overflow: hidden;
@@ -32,6 +32,7 @@ body {
 .header-top-2 {
 	padding: 15px 0;
 	background-color: #fff;
+	z-index: -1;
 }
 
 .header-top-2 > .container > .input-group {
