--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ body {
 .header-top-2 {
 	padding: 15px 0;
 	background-color: #fff;
-	z-index: -1;
 }
 
 .header-top-2 > .container > .input-group {
@@ -42,14 +41,26 @@ body {
 }
 
 /* panel */
+
+.panel h3 {
+	padding: 0;
+}
+.panel ul {
+	padding: 0;
+}
+.panel ul li {
+	margin-left: 15px;
+}
+
 .panel {
 	margin-bottom: 30px;
+	font-size: 12px;
 }
 .first {
 	height: 216px;
 	background: url('images/monitor.jpg');
 	background-repeat: no-repeat;
-	background-position: 30% 65%;
+	background-position: 50% 150%;
 }
 .panel-footer {
 	border-top: 1px solid #e6e6e6;
@@ -169,7 +180,7 @@ address {
 tr {
 	border: none;
 }
-.optimize {
+.optimize, .promote, .measure {
 	color: #AAB2BD;
     font-size: 35px;
     font-weight: 300;
@@ -242,6 +253,9 @@ tr {
 }
 
 /*Crawl Panel*/
+.crawl-panel {
+	padding-bottom: 50px;
+}
 .crawl-panel h2 {
 	margin: 15px;
 	font-size: 21px;
@@ -255,4 +269,139 @@ tr {
 	padding-bottom: 20px;
 	border-top: 1px solid #CCD1D9;
 	margin: 0 15px;
+}
+
+/*back link */
+.backlink-panel .row {
+	padding-bottom: 20px;
+	border-top: 1px solid #CCD1D9;
+	margin: 0 15px;
+}
+.backlink-panel h2 {
+	margin: 15px;
+    font-size: 21px;
+    line-height: 21px;
+    color: #333;
+}
+.backlink-panel h3 {
+	padding: 0;
+}
+.backlink-panel ul {
+	padding: 0;
+}
+.backlink-panel ul li {
+	margin-left: 15px;
+}
+
+/*social */
+.social-panel .row {
+	padding-bottom: 20px;
+	border-top: 1px solid #CCD1D9;
+	margin: 0 15px;
+}
+.social-panel h2 {
+	margin: 15px;
+    font-size: 21px;
+    line-height: 21px;
+    color: #333;
+}
+
+/* local */
+.local-panel {
+	padding-bottom: 50px;
+}
+.local-panel h2 {
+	margin: 15px;
+	font-size: 21px;
+    line-height: 21px;
+    color: #333;
+}
+.local-panel h3 {
+	padding: 0;
+}
+.local-panel .row {
+	padding-bottom: 20px;
+	border-top: 1px solid #CCD1D9;
+	margin: 0 15px;
+}
+
+/* serp */
+.serp-panel {
+	padding-bottom: 50px;
+}
+.serp-panel h2 {
+	margin: 15px;
+	font-size: 21px;
+    line-height: 21px;
+    color: #333;
+}
+.serp-panel h3 {
+	padding: 0;
+}
+.serp-panel .row {
+	padding-bottom: 20px;
+	border-top: 1px solid #CCD1D9;
+	margin: 0 15px;
+}
+
+/* visitors */
+.visitor-panel {
+	padding-bottom: 50px;
+}
+.visitor-panel li a {
+	margin: 0;
+	padding: 0;
+}
+.visitor-panel h2 {
+	margin: 15px;
+	font-size: 21px;
+    line-height: 21px;
+    color: #333;
+}
+.visitor-panel h3 {
+	padding: 0;
+}
+.visitor-panel .row {
+	padding-bottom: 20px;
+	border-top: 1px solid #CCD1D9;
+	margin: 0 15px;
+}
+
+/*footer*/
+footer {
+	padding: 0 0 20px 0;
+	margin: 20px 0;
+}
+footer ul li a {
+	color: #AAB2BD;
+	font-size: 13px;
+
+}
+footer ul li {
+	display: block;
+    padding: 0;
+    margin-bottom: 5px;
+}
+
+.nav-left > nav {
+	margin: 10px 0;
+	border-left: 2px solid #CFE2F2; 
+}
+.nav-left > nav a {
+	color: #000;
+	font-size: 12px;
+	width: 100%;
+	text-align: left;
+	border-radius: 2px;
+	background-color: #EDF1F5;
+}
+.ul-header {
+	display: block;
+    padding: 8px 0 10px 16px;
+    font-size: 18px !important;
+    line-height: 22px;
+	color: #333 !important;
+}
+.nav-left > nav a:hover {
+	background-color: rgba(0,0,0,.05);
 }
