--- a/style.css
+++ b/style.css
@@ -238,6 +238,15 @@ tr {
 	font-size: 11px;
 	color: #315d86;
 }
+/*usability*/
+.usability-panel h2 {
+	margin: 15px;
+	font-size: 21px;
+    line-height: 21px;
+    color: #333;
+
+}
+
 
 /*Technologies*/
 .technologies-panel h2 {
@@ -394,7 +403,11 @@ footer ul li {
     padding: 0;
     margin-bottom: 5px;
 }
-
+.fixed {
+	position: fixed;
+	top: 10px;
+	width: 180px;
+}
 .nav-left > nav {
 	margin: 10px 0;
 	border-left: 2px solid #CFE2F2; 
@@ -405,7 +418,6 @@ footer ul li {
 	width: 100%;
 	text-align: left;
 	border-radius: 2px;
-	background-color: #EDF1F5;
 	padding-right: 0;
 }
 .ul-header {
